<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:background="@color/black"
                >

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:src="@drawable/n1"
                    android:layout_marginTop="42dp"
                    ></ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="50sp"
                    >
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="40dp"
                    android:paddingBottom="60dp"
                    android:gravity="center"
                    >

                    <EditText
                        android:id="@+id/edit_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:background="@color/white"
                        android:hint="@string/hint_usuario"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        ></EditText>
                    <EditText
                        android:id="@+id/edit_contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:background="@color/white"
                        android:hint="@string/hint_clave"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        ></EditText>
                    <Button
                        android:id="@+id/btn_perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_perfil"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="25sp"
                        android:onClick="perfil_user"
                        ></Button>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/txt_sin_cuenta"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:layout_marginTop="30dp"
                        >
                    </TextView>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_registro"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="25sp"
                        ></Button>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/btn_acerca"
                        android:textSize="25sp"
                        ></Button>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>