<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserSessionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:gravity="center"
                android:background="@color/black"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_user_register"
                    android:textSize="30sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textStyle="bold|italic"
                    ></TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_registration"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:textStyle="italic"
                    ></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|end"
                android:paddingTop="40dp"
                android:paddingEnd="40dp"
                android:paddingStart="80dp"
                android:paddingBottom="60dp"
                android:background="@color/teal_200"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="User"
                    android:textColorHint="@color/white"
                    ></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="Password"
                    android:textColorHint="@color/white"
                    ></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="Verify Password"
                    android:textColorHint="@color/white"
                    ></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="Phone"
                    android:textColorHint="@color/white"
                    ></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="Birth date"
                    android:textColorHint="@color/white"
                    ></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="Address"
                    android:textColorHint="@color/white"
                    ></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="textEnd"
                    android:hint="Company"
                    android:textColorHint="@color/white"
                    ></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/btn_confirmar"
                    android:textSize="22sp"
                    android:layout_margin="8dp"
                    ></Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/btn_cancelar"
                    android:textSize="22sp"
                    android:layout_margin="8dp"
                    android:onClick="Regresar"
                    ></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/black"
                android:paddingTop="40dp"
                android:paddingBottom="60dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:text="Powered By\nCodersteam">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:text="Powered By\nCodersteam">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:text="Powered By\nCodersteam">
                </TextView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>